edu/lecture4/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ing
  # annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - nginx.211.253.25.128.sslip.io # 접근할 호스트
  tls:
    - secretName: nginx-tls-secret
  rules:
    - host: "nginx.211.253.25.128.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
